--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -83,8 +83,9 @@
     "button-color": "#90382a",
     "button-hover-background": "#d7cdaf",
     "button-hover-color": "#000000",
-    "header-font": "Google+UnifrakturMaguntia",
-    "body-font": "Google+Almendra",
+    "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Quando|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>",
+    "header-font": "'Quando', serif",
+    "body-font": "'Open Sans', sans-serif",
     "google_business_view_url": "",
     "display_google_business_view_url": false,
     "google_business_view_embed": "",
@@ -177,8 +178,9 @@
       "button-color": "#90382a",
       "button-hover-background": "#d7cdaf",
       "button-hover-color": "#000000",
-      "header-font": "Google+UnifrakturMaguntia",
-      "body-font": "Google+Almendra",
+      "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Quando|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>",
+      "header-font": "'Quando', serif",
+      "body-font": "'Open Sans', sans-serif",
       "google_business_view_url": "",
       "display_google_business_view_url": false,
       "google_business_view_embed": "",
