--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,45 +1,42 @@
 {
   "current":{
-    "body-background": "#d7cdaf",
-    "body-color": "#222222",
+    "body-background": "#ffffff",
+    "body-color": "#333333",
     "restaurant-name-color": "#ffffff",
-    "slogan-color": "#ffffff",
-    "main-nav-link-color": "#ffffff",
-    "main-nav-link-hover-color": "#d7cdaf",
-    "main-nav-link-hover-border-color": "#d7cdaf",
-    "footer-background": "#54699b",
-    "back-to-top-link-color": "#c6cdde",
-    "back-to-top-link-hover-color": "#ffffff",
-    "footer-restaurant-name-color": "#ffffff",
-    "footer-restaurant-name-border-color": "#7e8eb4",
-    "footer-email-color": "#d8c061",
-    "footer-email-hover-color": "#ffffff",
-    "footer-subscribe-title-color": "#ffffff",
-    "footer-subscribe-label-color": "#ffffff",
-    "social-link-color": "#ffffff",
-    "social-link-hover-border-color": "#ffffff",
-    "legal-link-color": "#c6cdde",
-    "legal-link-hover-color": "#ffffff",
-    "menu-title-color": "#000000",
-    "menu-title-separator-color": "#54699b",
-    "menu-description-color": "#737373",
+    "slogan-color": "#999999",
+    "main-nav-background": "#f2f2f2",
+    "main-nav-link-color": "#333333",
+    "main-nav-link-background": "#f2f2f2",
+    "main-nav-link-hover-color": "#ffffff",
+    "main-nav-link-hover-background": "#333333",
+    "footer-background": "#f2f2f2",
+    "back-to-top-link-color": "#999999",
+    "back-to-top-link-hover-color": "#333333",
+    "footer-subscribe-title-color": "#333333",
+    "footer-subscribe-label-color": "#747474",
+    "social-link-color": "#747474",
+    "social-link-hover-color": "#333333",
+    "legal-link-color": "#747474",
+    "legal-link-hover-color": "#333333",
+    "menu-title-color": "#333333",
+    "menu-description-color": "#747474",
     "menu-link-color": "#3C61AF",
-    "menu-link-hover-color": "#222222",
-    "back-to-menu-link-color": "#737373",
-    "back-to-menu-link-hover-color": "#000000",
-    "food-summary-description-color": "#737373",
-    "featured-star-color": "#c4a805",
-    "price-border-color": "#bbbbbb",
-    "price-label-color": "#888888",
-    "price-value-background": "#d3d3d3",
-    "price-value-color": "#54699b",
+    "menu-link-hover-color": "#333333",
+    "back-to-menu-link-color": "#727272",
+    "back-to-menu-link-hover-color": "#333333",
+    "food-summary-description-color": "#747474",
+    "featured-star-color": "#ffcc00",
+    "price-border-color": "#e5e5e5",
+    "price-label-color": "#999999",
+    "price-value-background": "#f2f2f2",
+    "price-value-color": "#333333",
     "label-vegetarian-background": "#8a9e6c",
     "label-vegetarian-color": "#ffffff",
     "label-new-background": "#d8c061",
     "label-new-color": "#ffffff",
-    "page-header-background": "#d8c061",
-    "page-header-title-color": "#692C0A",
-    "page-header-description-color": "#5C4E3C",
+    "page-header-background": "#ffffff",
+    "page-header-title-color": "#747474",
+    "page-header-description-color": "#333333",
     "featured-menus-background": "#c9c9c9",
     "featured-menus-title-color": "#696474",
     "featured-menus-ribbon-color": "#D8861E",
@@ -48,41 +45,34 @@
     "featured-foods-title-color": "#6F4231",
     "featured-foods-ribbon-color": "#7D8D53",
     "featured-foods-border-color": "#B69665",
-    "opening-hours-background": "#d7cdaf",
-    "opening-hours-title-color": "#6b6450",
-    "opening-hours-ribbon-color": "#90382a",
-    "opening-hours-border-color": "#bcb297",
-    "opening-hours-day-color": "#6b6450",
-    "opening-hours-shifts-color": "#3c3729",
-    "directions-background": "#90382a",
-    "directions-title-color": "#d8c061",
-    "directions-ribbon-color": "#7482a0",
-    "directions-border-color": "#a25a37",
-    "address-color": "#c6ab95",
-    "restaurant-gallery-background": "#d7cdaf",
-    "gallery-item-background": "#e4ddc9",
-    "gallery-caption-color": "#3c3729",
+    "opening-hours-background": "#ffffff",
+    "opening-hours-title-color": "#333333",
+    "opening-hours-border-color": "#e5e5e5",
+    "opening-hours-day-color": "#999999",
+    "opening-hours-shifts-color": "#333333",
+    "directions-background": "#ffffff",
+    "directions-title-color": "#333333",
+    "directions-border-color": "#e5e5e5",
+    "address-color": "#333333",
+    "restaurant-gallery-background": "#ffffff",
+    "gallery-item-background": "#e5e5e5",
+    "gallery-caption-color": "#333333",
+    "form-legend-color": "#747474",
+    "form-label-color": "#333333",
+    "form-field-background": "#ffffff",
+    "form-field-border-color": "#e5e5e5",
     "input-hint-info-background": "#68708A",
     "input-hint-info-color": "#ffffff",
     "input-hint-error-background": "#DF5900",
     "input-hint-error-color": "#ffffff",
-    "contact-form-background": "#90382a",
-    "contact-form-legend-color": "#d8c061",
-    "contact-form-label-color": "#ffffff",
-    "newsletter-form-background": "#90382a",
-    "newsletter-form-legend-color": "#d8c061",
-    "newsletter-form-label-color": "#ffffff",
     "message-success-background": "#4E6F25",
     "message-success-color": "#ffffff",
     "message-error-background": "#811515",
     "message-error-color": "#ffffff",
-    "legal-page-background": "#d7cdaf",
-    "legal-page-link-color": "#90382a",
-    "legal-page-link-hover-color": "#323f5c",
-    "button-background": "#d8c061",
-    "button-color": "#90382a",
-    "button-hover-background": "#d7cdaf",
-    "button-hover-color": "#000000",
+    "button-background": "#747474",
+    "button-color": "#ffffff",
+    "button-hover-background": "#5b5b5b",
+    "button-hover-color": "#ffffff",
     "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Quando|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>",
     "header-font": "'Quando', serif",
     "body-font": "'Open Sans', sans-serif",
@@ -96,46 +86,43 @@
   },
   "presets":{
     "Original":{
-      "body-background": "#d7cdaf",
-      "body-color": "#222222",
-      "restaurant-name-color": "#ffffff",
-      "slogan-color": "#ffffff",
-      "main-nav-link-color": "#ffffff",
-      "main-nav-link-hover-color": "#d7cdaf",
-      "main-nav-link-hover-border-color": "#d7cdaf",
-      "footer-background": "#54699b",
-      "back-to-top-link-color": "#c6cdde",
-      "back-to-top-link-hover-color": "#ffffff",
-      "footer-restaurant-name-color": "#ffffff",
-      "footer-restaurant-name-border-color": "#7e8eb4",
-      "footer-email-color": "#d8c061",
-      "footer-email-hover-color": "#ffffff",
-      "footer-subscribe-title-color": "#ffffff",
-      "footer-subscribe-label-color": "#ffffff",
-      "social-link-color": "#ffffff",
-      "social-link-hover-border-color": "#ffffff",
-      "legal-link-color": "#c6cdde",
-      "legal-link-hover-color": "#ffffff",
-      "menu-title-color": "#000000",
-      "menu-title-separator-color": "#54699b",
-      "menu-description-color": "#737373",
+      "body-background": "#ffffff",
+      "body-color": "#333333",
+      "restaurant-name-color": "#747474",
+      "slogan-color": "#999999",
+      "main-nav-background": "#f2f2f2",
+      "main-nav-link-color": "#333333",
+      "main-nav-link-background": "#f2f2f2",
+      "main-nav-link-hover-color": "#ffffff",
+      "main-nav-link-hover-background": "#333333",
+      "footer-background": "#f2f2f2",
+      "back-to-top-link-color": "#999999",
+      "back-to-top-link-hover-color": "#333333",
+      "footer-subscribe-title-color": "#333333",
+      "footer-subscribe-label-color": "#747474",
+      "social-link-color": "#747474",
+      "social-link-hover-color": "#333333",
+      "legal-link-color": "#747474",
+      "legal-link-hover-color": "#333333",
+      "menu-title-color": "#333333",
+      "menu-description-color": "#747474",
       "menu-link-color": "#3C61AF",
-      "menu-link-hover-color": "#222222",
-      "back-to-menu-link-color": "#737373",
-      "back-to-menu-link-hover-color": "#000000",
-      "food-summary-description-color": "#737373",
-      "featured-star-color": "#c4a805",
-      "price-border-color": "#bbbbbb",
-      "price-label-color": "#888888",
-      "price-value-background": "#d3d3d3",
-      "price-value-color": "#54699b",
+      "menu-link-hover-color": "#333333",
+      "back-to-menu-link-color": "#727272",
+      "back-to-menu-link-hover-color": "#333333",
+      "food-summary-description-color": "#747474",
+      "featured-star-color": "#ffcc00",
+      "price-border-color": "#e5e5e5",
+      "price-label-color": "#999999",
+      "price-value-background": "#f2f2f2",
+      "price-value-color": "#333333",
       "label-vegetarian-background": "#8a9e6c",
       "label-vegetarian-color": "#ffffff",
       "label-new-background": "#d8c061",
       "label-new-color": "#ffffff",
-      "page-header-background": "#d8c061",
-      "page-header-title-color": "#692C0A",
-      "page-header-description-color": "#5C4E3C",
+      "page-header-background": "#ffffff",
+      "page-header-title-color": "#747474",
+      "page-header-description-color": "#333333",
       "featured-menus-background": "#c9c9c9",
       "featured-menus-title-color": "#696474",
       "featured-menus-ribbon-color": "#D8861E",
@@ -144,40 +131,34 @@
       "featured-foods-title-color": "#6F4231",
       "featured-foods-ribbon-color": "#7D8D53",
       "featured-foods-border-color": "#B69665",
-      "opening-hours-title-color": "#6b6450",
-      "opening-hours-ribbon-color": "#90382a",
-      "opening-hours-border-color": "#bcb297",
-      "opening-hours-day-color": "#6b6450",
-      "opening-hours-shifts-color": "#3c3729",
-      "directions-background": "#90382a",
-      "directions-title-color": "#d8c061",
-      "directions-ribbon-color": "#7482a0",
-      "directions-border-color": "#a25a37",
-      "address-color": "#c6ab95",
-      "restaurant-gallery-background": "#d7cdaf",
-      "gallery-item-background": "#e4ddc9",
-      "gallery-caption-color": "#3c3729",
+      "opening-hours-background": "#ffffff",
+      "opening-hours-title-color": "#333333",
+      "opening-hours-border-color": "#e5e5e5",
+      "opening-hours-day-color": "#999999",
+      "opening-hours-shifts-color": "#333333",
+      "directions-background": "#ffffff",
+      "directions-title-color": "#333333",
+      "directions-border-color": "#e5e5e5",
+      "address-color": "#333333",
+      "restaurant-gallery-background": "#ffffff",
+      "gallery-item-background": "#e5e5e5",
+      "gallery-caption-color": "#333333",
+      "form-legend-color": "#747474",
+      "form-label-color": "#333333",
+      "form-field-background": "#ffffff",
+      "form-field-border-color": "#e5e5e5",
       "input-hint-info-background": "#68708A",
       "input-hint-info-color": "#ffffff",
       "input-hint-error-background": "#DF5900",
       "input-hint-error-color": "#ffffff",
-      "contact-form-background": "#90382a",
-      "contact-form-legend-color": "#d8c061",
-      "contact-form-label-color": "#ffffff",
-      "newsletter-form-background": "#90382a",
-      "newsletter-form-legend-color": "#d8c061",
-      "newsletter-form-label-color": "#ffffff",
       "message-success-background": "#4E6F25",
       "message-success-color": "#ffffff",
       "message-error-background": "#811515",
       "message-error-color": "#ffffff",
-      "legal-page-background": "#d7cdaf",
-      "legal-page-link-color": "#90382a",
-      "legal-page-link-hover-color": "#323f5c",
-      "button-background": "#d8c061",
-      "button-color": "#90382a",
-      "button-hover-background": "#d7cdaf",
-      "button-hover-color": "#000000",
+      "button-background": "#747474",
+      "button-color": "#ffffff",
+      "button-hover-background": "#5b5b5b",
+      "button-hover-color": "#ffffff",
       "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Quando|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>",
       "header-font": "'Quando', serif",
       "body-font": "'Open Sans', sans-serif",
