--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -61,8 +61,7 @@
     "directions-border-color": "#e5e5e5",
     "address-color": "#333333",
     "restaurant-gallery-background": "#ffffff",
-    "gallery-item-background": "#e5e5e5",
-    "gallery-caption-color": "#333333",
+    "gallery-caption-color": "#ffffff",
     "form-legend-color": "#747474",
     "form-label-color": "#333333",
     "form-field-background": "#ffffff",
