--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -43,22 +43,20 @@
     "page-header-description-color": "#333333",
     "page-body-link-color": "#747474",
     "page-body-link-hover-color": "#333333",
-    "featured-menus-background": "#c9c9c9",
-    "featured-menus-title-color": "#696474",
-    "featured-menus-ribbon-color": "#D8861E",
-    "featured-menus-border-color": "#bcb297",
-    "featured-foods-background": "#caaf7d",
-    "featured-foods-title-color": "#6F4231",
-    "featured-foods-ribbon-color": "#7D8D53",
-    "featured-foods-border-color": "#B69665",
+    "featured-menus-background": "#ffffff",
+    "featured-menus-title-color": "#000000",
+    "featured-menus-border-color": "#747474",
+    "featured-foods-background": "#f2f2f2",
+    "featured-foods-title-color": "#000000",
+    "featured-foods-border-color": "#747474",
     "opening-hours-background": "#ffffff",
     "opening-hours-title-color": "#333333",
-    "opening-hours-border-color": "#e5e5e5",
+    "opening-hours-border-color": "#747474",
     "opening-hours-day-color": "#999999",
     "opening-hours-shifts-color": "#333333",
     "directions-background": "#ffffff",
     "directions-title-color": "#333333",
-    "directions-border-color": "#e5e5e5",
+    "directions-border-color": "#747474",
     "address-color": "#333333",
     "restaurant-gallery-background": "#ffffff",
     "gallery-caption-color": "#ffffff",
