update parameters theme (json & html)

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -39,6 +39,10 @@
     "label-vegetarian-color": "#ffffff",
     "label-new-background": "#d8c061",
     "label-new-color": "#ffffff",
+    "label-no-pork-background": "#0091cc",
+    "label-no-pork-color": "#ffffff",
+    "label-no-meat-background": "#cc8700",
+    "label-no-meat-color": "#ffffff",
     "page-header-background": "#ffffff",
     "page-header-title-color": "#747474",
     "page-header-description-color": "#333333",
@@ -126,6 +130,10 @@
       "label-vegetarian-color": "#ffffff",
       "label-new-background": "#d8c061",
       "label-new-color": "#ffffff",
+      "label-no-pork-background": "#0091cc",
+      "label-no-pork-color": "#ffffff",
+      "label-no-meat-background": "#cc8700",
+      "label-no-meat-color": "#ffffff",
       "page-header-background": "#ffffff",
       "page-header-title-color": "#747474",
       "page-header-description-color": "#333333",
