--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,7 +1,7 @@
 {
   "current":{
-    "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Linden+Hill|Open+Sans:400,700' rel='stylesheet' type='text/css'>",
-    "header-font": "'Linden Hill', serif",
+    "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Bevan|Open+Sans:400,700' rel='stylesheet' type='text/css'>",
+    "header-font": "Bevan",
     "body-font": "'Open Sans', sans-serif",
     "body-background": "#ffffff",
     "body-color": "#465155",
@@ -15,8 +15,8 @@
   },
   "presets":{
     "Original":{
-      "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Linden+Hill|Open+Sans:400,700' rel='stylesheet' type='text/css'>",
-      "header-font": "'Linden Hill', serif",
+      "google-fonts-link": "<link href='http://fonts.googleapis.com/css?family=Bevan|Open+Sans:400,700' rel='stylesheet' type='text/css'>",
+      "header-font": "Bevan",
       "body-font": "'Open Sans', sans-serif",
       "body-background": "#ffffff",
       "body-color": "#465155",
