change tag system

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -10,6 +10,18 @@
     "home_menus_featured_text_en": "This week",
     "home_foods_featured_text_fr": "Suggestions",
     "home_foods_featured_text_en": "Suggestions",
+    "tags":{
+        "vegan-background": "#8a9e6c",
+        "vegan-color": "#ffffff",
+        "new-background": "#d8c061",
+        "new-color": "#ffffff",
+        "no-pork-background": "#73ABE1",
+        "no-pork-color": "#ffffff",
+        "no-meat-background": "#DACD13",
+        "no-meat-color": "#ffffff",
+        "alcohol-free-background": "#48caf2",
+        "alcohol-free-color": "#ffffff"
+    },
     "google_business_view_url": "",
     "display_google_business_view_url": false,
     "google_business_view_embed": "",
@@ -29,6 +41,18 @@
       "home_menus_featured_text_en": "This week",
       "home_foods_featured_text_fr": "Suggestions",
       "home_foods_featured_text_en": "Suggestions",
+      "tags":{
+        "vegan-background": "#8a9e6c",
+        "vegan-color": "#ffffff",
+        "new-background": "#d8c061",
+        "new-color": "#ffffff",
+        "no-pork-background": "#73ABE1",
+        "no-pork-color": "#ffffff",
+        "no-meat-background": "#DACD13",
+        "no-meat-color": "#ffffff",
+        "alcohol-free-background": "#48caf2",
+        "alcohol-free-color": "#ffffff"
+    },
       "google_business_view_url": "",
       "display_google_business_view_url": false,
       "google_business_view_embed": "",
