refactor form object and create component newsletter-form

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -6,6 +6,8 @@
     "body-background": "#ffffff",
     "body-color": "#465155",
     "accent-color": "#e5442e",
+    "color-input-hint-error-background": "#DF5900",
+    "color-input-hint-error-text": "#FFFFFF",
     "home_menus_featured_text_fr": "Cette semaine",
     "home_menus_featured_text_en": "This week",
     "home_foods_featured_text_fr": "Suggestions",
@@ -39,6 +41,8 @@
       "body-background": "#ffffff",
       "body-color": "#465155",
       "accent-color": "#e5442e",
+      "color-input-hint-error-background": "#DF5900",
+      "color-input-hint-error-text": "#FFFFFF",
       "home_menus_featured_text_fr": "Cette semaine",
       "home_menus_featured_text_en": "This week",
       "home_foods_featured_text_fr": "Suggestions",
