refactor component message

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -8,6 +8,12 @@
     "accent-color": "#e5442e",
     "color-input-hint-error-background": "#DF5900",
     "color-input-hint-error-text": "#FFFFFF",
+    "color-message-success-background": "#4E6F25",
+    "color-message-success-text": "#FFFFFF",
+    "color-message-notice-background": "#DF5900",
+    "color-message-notice-text": "#FFFFFF",
+    "color-message-error-background": "#811515",
+    "color-message-error-text": "#FFFFFF",
     "home_menus_featured_text_fr": "Cette semaine",
     "home_menus_featured_text_en": "This week",
     "home_foods_featured_text_fr": "Suggestions",
@@ -43,6 +49,12 @@
       "accent-color": "#e5442e",
       "color-input-hint-error-background": "#DF5900",
       "color-input-hint-error-text": "#FFFFFF",
+      "color-message-success-background": "#4E6F25",
+      "color-message-success-text": "#FFFFFF",
+      "color-message-notice-background": "#DF5900",
+      "color-message-notice-text": "#FFFFFF",
+      "color-message-error-background": "#811515",
+      "color-message-error-text": "#FFFFFF",
       "home_menus_featured_text_fr": "Cette semaine",
       "home_menus_featured_text_en": "This week",
       "home_foods_featured_text_fr": "Suggestions",
