refactor banner component

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -6,6 +6,7 @@
     "body-background": "#ffffff",
     "body-color": "#465155",
     "accent-color": "#e5442e",
+    "color-banner-text": "#FFFFFF",
     "color-input-hint-error-background": "#DF5900",
     "color-input-hint-error-text": "#FFFFFF",
     "color-message-success-background": "#4E6F25",
@@ -47,6 +48,7 @@
       "body-background": "#ffffff",
       "body-color": "#465155",
       "accent-color": "#e5442e",
+      "color-banner-text": "#FFFFFF",
       "color-input-hint-error-background": "#DF5900",
       "color-input-hint-error-text": "#FFFFFF",
       "color-message-success-background": "#4E6F25",
