refactor back-to-top component

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -7,6 +7,8 @@
     "body-color": "#465155",
     "accent-color": "#e5442e",
     "color-banner-text": "#FFFFFF",
+    "color-back-to-top-text": "#727272",
+    "color-back-to-top-text--hover": "#000000",
     "color-input-hint-error-background": "#DF5900",
     "color-input-hint-error-text": "#FFFFFF",
     "color-message-success-background": "#4E6F25",
@@ -49,6 +51,8 @@
       "body-color": "#465155",
       "accent-color": "#e5442e",
       "color-banner-text": "#FFFFFF",
+      "color-back-to-top-text": "#727272",
+      "color-back-to-top-text--hover": "#000000",
       "color-input-hint-error-background": "#DF5900",
       "color-input-hint-error-text": "#FFFFFF",
       "color-message-success-background": "#4E6F25",
