--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,6 +9,7 @@
     "color-banner-text": "#FFFFFF",
     "color-back-to-top-text": "#727272",
     "color-back-to-top-text--hover": "#000000",
+    "color-menu-featured-background": "#EEEEEE",
     "color-input-hint-error-background": "#DF5900",
     "color-input-hint-error-text": "#FFFFFF",
     "color-message-success-background": "#4E6F25",
@@ -53,6 +54,7 @@
       "color-banner-text": "#FFFFFF",
       "color-back-to-top-text": "#727272",
       "color-back-to-top-text--hover": "#000000",
+      "color-menu-featured-background": "#EEEEEE",
       "color-input-hint-error-background": "#DF5900",
       "color-input-hint-error-text": "#FFFFFF",
       "color-message-success-background": "#4E6F25",
