--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -10,6 +10,9 @@
     "color-back-to-top-text": "#727272",
     "color-back-to-top-text--hover": "#000000",
     "color-menu-featured-background": "#EEEEEE",
+    "color-food-featured-background": "#FFFFFF",
+    "color-default-tag-background": "#AAAAAA",
+    "color-default-tag-text": "#FFFFFF",
     "color-input-hint-error-background": "#DF5900",
     "color-input-hint-error-text": "#FFFFFF",
     "color-message-success-background": "#4E6F25",
@@ -55,6 +58,9 @@
       "color-back-to-top-text": "#727272",
       "color-back-to-top-text--hover": "#000000",
       "color-menu-featured-background": "#EEEEEE",
+      "color-food-featured-background": "#FFFFFF",
+      "color-default-tag-background": "#AAAAAA",
+      "color-default-tag-text": "#FFFFFF",
       "color-input-hint-error-background": "#DF5900",
       "color-input-hint-error-text": "#FFFFFF",
       "color-message-success-background": "#4E6F25",
